version 2.0-rc2 03-Jun-2012
. [NEW] Added Javascript test using JSCocoa (Mac only)
			ActionTests, SpriteTests (WIP)
. [NEW] RenderTexture: Added support for Depth Stencil
. [FIX] ccArray: Implementation is no longer inlined. Needed for gen_bridge_metada.
		Make it compatible with C99
		Added __cplusplus #ifdef in header
. [FIX] FileUtils: easier to override the search folder
		Added __cplusplus #ifdef in header
. [FIX] LabelTTF: improved loading time. Label is updated only if the string is set.
. [FIX] Macros: CCLOG doesn't log the function name. Only CCLOGWARN
. [FIX] MenuItem: setIsEnabled can be called before setting the images
. [FIX] Particle: Handles premultipled images correctly
		Fixed possible memory leak when changing textures.
		Examples: Removed ARCH_OPTIMAL_PARTICLE_SYSTEM since PointParticle is no longer supported
. [FIX] SpriteFrameCache: plist is not loaded again if it was already loaded (performance)
. [FIX] Texture2d: JPEG are loaded correctly on iOS4 (re-re-fixed issue #886)
		Improved iOS5 allocation bug warning and internal conversions.
		Fixed alpha when converting RGBA8 textures to RGB5A1
. [3RD] Chipmunk Physics: Updated to v6.1.1

version 2.0-rc1 19-Apr-2012
. [NEW] v1.1 Forward-ported changes:
		CCArray: new sorting methods, replaceObjectAtIndex, isEqualToArray
		CCArray: equalilty is tested by isEqual instead of comparing pointer addresses
		CCArray: CCARRAY_FOREACH macro is now ARC compatible
		DrawPrimitives: Added new functions: ccDrawRect, ccDrawSolidRect
		Macros: CCLOG logs the class/method name
		Particles: The scheduler is removed on dealloc
		TMX: fixed bug on release when parsing errors.
. [NEW] Actions: Added Catmull Rom By/To and Cardinal Spline By/To actions
. [NEW] ActionManager: Added support for pause/resume all actions of target
. [NEW] Configuration: logs in which thread the director is running (Mac only)
. [NEW] DrawingPrimitives: added ccDrawCatmullRom, ccDrawCardinalSpline